kubernetes/201/04.1.example-voting-app/k8s-specifications/result-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: example-voting-app_result
        imagePullPolicy: IfNotPresent
        name: result
