kubernetes/201/04.1.example-voting-app/k8s-specifications/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: example-voting-app_worker
        imagePullPolicy: IfNotPresent
        name: worker
